--- a/templates/base.html
+++ b/templates/base.html
@@ -139,6 +139,18 @@
         .alert-danger {
             @apply bg-red-600
         }
+
+        .green-dot {
+            @apply rounded-full bg-green-500 p-1.5
+        }
+
+        .gray-dot {
+            @apply rounded-full bg-gray-500 p-1.5
+        }
+        
+        .graylight-dot {
+            @apply rounded-full bg-gray-300 p-1.5
+        }
     </style>
 </head>
 <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}' class="{% block class %}{% endblock %}">
