--- a/a_rtchat/templates/a_rtchat/chat.html
+++ b/a_rtchat/templates/a_rtchat/chat.html
@@ -32,7 +32,7 @@
                         </div>
                     </a>
                 {% elif chat_group.groupchat_name %}
-                    <ul id="groupchat-members" class="flex gap-4">
+                    <ul id="groupchat-member" class="flex gap-4">
                         {% for member in chat_group.members.all %}
                             <li>
                                 <a href="{% url 'profile' member.username %}"
@@ -56,7 +56,7 @@
                 </ul>
             </div>
             <div class="sticky bottom-0 z-10 p-2 bg-gray-800">
-                <div class="flex items-center rounded-xl px-2 py-2">
+                <div class="flex flex-col gap-4 items-center rounded-xl px-2 py-2">
                     <form id="chat_message_form" class="w-full"
                           hx-ext="ws"
                           ws-connect="/ws/chatroom/{{ chatroom_name }}"
