--- a/a_rtchat/templates/a_rtchat/chat_message.html
+++ b/a_rtchat/templates/a_rtchat/chat_message.html
@@ -15,8 +15,11 @@
         <div class="flex justify-start">
             <div class="flex items-end mr-2">
                 <a href="{% url 'profile' message.author.username %}">
-                    <img class="w-8 h-8 rounded-full object-cover"
-                         src="{{ message.author.profile.avater }}">
+                    <div class="relative">
+                        <div id="user-{{ message.author.id }}"></div>
+                        <img class="w-8 h-8 rounded-full object-cover"
+                             src="{{ message.author.profile.avater }}">
+                    </div>
                 </a>
             </div>
             <div class="flex items-end">
