--- a/a_rtchat/templates/a_rtchat/partials/online_count.html
+++ b/a_rtchat/templates/a_rtchat/partials/online_count.html
@@ -1,4 +1,4 @@
-<span id="online-count" hx-swap-oob="outerHTML" class="pr-1">
+<span id="online-count" hx-swap-oob="outerHTML" class="fade-in-scale pr-1">
     {{ online_count }}
     <style>
         @keyframes fadeInScale {
@@ -16,7 +16,7 @@
             animation: fadeInScale 0.6s ease;
         }
     </style>
-</span>online
+</span>
 
 {% if online_count %}
     <div id="online-icon" class="green-dot absolute top-2 left-2"></div>
@@ -42,3 +42,11 @@
         </li>
     {% endfor %}
 </ul>
+
+{% for user in users %}
+    {% if user in chat_group.users_online.all %}
+        <div id="user-{{ user.id }}" class="green-dot border-2 border-gray-800 absolute -bottom-1 -right-1"></div>
+    {% else %}
+        <div id="user-{{ user.id }}" class="gray-dot border-2 border-gray-800 absolute -bottom-1 -right-1"></div>
+    {% endif %}
+{% endfor %}
