feat: send file
feat: send file

--- a/a_rtchat/templates/a_rtchat/partials/chat_message_p.html
+++ b/a_rtchat/templates/a_rtchat/partials/chat_message_p.html
@@ -21,13 +21,7 @@
         }
     </style>
 
-    <script>
-        function scrollToBottom() {
-            const container = document.getElementById('chat_container')
-            container.scrollTop = container.scrollHeight
-        }
-
-        scrollToBottom()</script>
+    <script>scrollToBottom(100)</script>
 
 </div>
 
