--- a/a_rtchat/templates/a_rtchat/chat.html
+++ b/a_rtchat/templates/a_rtchat/chat.html
@@ -65,6 +65,15 @@
                         {% csrf_token %}
                         {{ form }}
                     </form>
+                    <form id="chat_file_form" enctype="multipart/form-data" class="flex items-center w-full"
+                          hx-post="{% url 'chat-file-upload' chat_group.group_name %}"
+                          hx-target="#chat_messages"
+                          hx-swap="beforeend"
+                          _="on htmx:beforeSend reset() me">
+                        {% csrf_token %}
+                        <input type="file" name="file" id="id_file" class="!bg-transpartent text-gray-400">
+                        <button type="submit" class="whitespace-nowrap !text-sm !py-3 !px-4 h-fit">Submit File</button>
+                    </form>
                 </div>
             </div>
         </div>
@@ -79,9 +88,11 @@
 
 {% block javascript %}
     <script>
-        function scrollToBottom() {
-            const container = document.getElementById('chat_container');
-            container.scrollTop = container.scrollHeight;
+        function scrollToBottom(time = 0) {
+            setTimeout(function () {
+                const container = document.getElementById('chat_container');
+                container.scrollTop = container.scrollHeight;
+            }, time);
         }
 
         scrollToBottom()
